# kflash

./: .gitignore  README.md  install.sh  kflash.py  pyproject.toml
.github/workflows/: ci.yml
docs/: board-profiles.md  configuration.md  exploration-katapult-provisioning.md  flashing.md  troubleshooting.md
docs/plans/: 2026-07-19-katapult-first-flash.md  2026-07-20-first-flash-followups.md
kflash/: __init__.py  ansi.py  blocklist.py  boards.py  bootloader.py  build.py  ccache.py  config.py  decisions.py  discovery.py  errors.py  events.py  flash.py  flash_steps.py  flasher.py  models.py  moonraker.py  output.py  panels.py  preflight.py  registry.py  runner.py  safety.py  screen.py  service.py  theme.py  tui.py  validation.py
kflash/board_configs/: README.md  btt-ebb36-42-can.config  btt-hbb-katapult.config  btt-hbb.config  btt-manta-m8p-h723.config  btt-octopus-f446.config  btt-octopus-pro-f446.config  btt-octopus-pro-h723.config  btt-sb2209-sb2240-can.config  btt-skr-mini-e3-v2.config  btt-skr-mini-e3-v3.config  fysetc-spider-v2.config  ldo-nitehawk-36.config  mellow-fly-sht36-v1-v2.config  mellow-fly-sht36-v3.config  raspberry-pi-pico.config
kflash/commands/: __init__.py  _common.py  build_cmd.py  device_add.py  device_manage.py  flash_batch.py  flash_single.py
kflash/ui/: __init__.py  app.py  dialogs.py  engine_bridge.py  kflash.tcss  menuconfig.py  skin.py  style_guide.py
kflash/ui/screens/: __init__.py  add_device.py  dashboard.py  device_config.py  operation.py  settings.py
tests/: conftest.py  test_boards.py  test_bootloader_manual.py  test_build.py  test_command_device_add.py  test_command_device_manage.py  test_command_flash_batch.py  test_command_flash_single.py  test_config.py  test_decisions.py  test_discovery.py  test_errors.py  test_events.py  test_flash_steps.py  test_layering.py  test_moonraker.py  test_registry.py  test_runner.py  test_safety.py  test_safety_gate.py  test_validation.py  test_worker_thread_signals.py
tests/ui/: __init__.py  conftest.py  test_add_device.py  test_dashboard.py  test_device_config.py  test_dialogs.py  test_engine_bridge.py  test_menuconfig.py  test_operation.py  test_settings.py  test_style_guide_snapshot.py
